--- a/smallcms/templates/base.html
+++ b/smallcms/templates/base.html
@@ -312,6 +312,20 @@
         });
 
 
+              $('.thumbnail_container img').click(function () {
+                $('#item_big_img').html('');
+                $('#item_big_img').append('<a href="'+$(this).attr('data-xlurl')+'" data-toggle="lightbox" data-gallery="item-gallery"><img src="'+$(this).attr('data-url')+'">');
+            });
+            if ($('.thumbnail_container img').length) $('.thumbnail_container img')[0].click();
+
+            $('#item-variation-select').change(function () {
+                $('.item-desc').hide();
+                $('#item-desc-'+$(this).val()).show();
+
+
+            });
+
+
     });
 
 
