--- a/news/templates/news/news_detail.html
+++ b/news/templates/news/news_detail.html
@@ -15,17 +15,18 @@
 {% block content %}
 
      <div class="container">
-				<header class="tab-header clearfix wow fadeInUp" data-wow-delay="0.7s" data-wow-duration="1.5s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.7s; animation-name: fadeInUp;">
-					<h2 class="title title--main pull-left">{{ news.published_date|date:"d.m.Y" }} | {{ news.title }}<span class="line line--small"><span class="line__first"></span><span class="line__second"></span></span></h2>
-					<div class="tab-toggles pull-right js-isotope-btns">
-
-					</div>
+				<header class="" data-wow-delay="0.7s" data-wow-duration="1.5s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.7s; animation-name: fadeInUp;">
+					<h4 class="">{{ news.published_date|date:"d.m.Y" }} | {{ news.title }}<span class="line line--small"><span class="line__first"></span><span class="line__second"></span></span></h4>
 				</header>
 
     <div></div>
-    <img src="/media/{{ news.file }}" width="300" style="margin: 0 20px 20px 20px; float: left;">
+
+         <img src="/media/{{ news.file }}" width="300" style="margin: 0 20px 20px 20px; float: left;">
     {{ news.text|safe }}
-    </div>
+
+     </div>
+
+
     <div class="row">
                 <br>
                 <div class="col-md-12" align="center"> <a class="btn button button--red button--main" style="width: 100px" href="{% url 'news:list_all' %}">все новости</a></div>
@@ -33,4 +34,6 @@
     <br>
     <br>
             </div>
+
+    <div style="clear: both"></div>
 {% endblock content %}
