--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,3 +333,44 @@ text-align: center;
     font-size: 20px;
     font-weight: bold;
 }
+
+.thumbnail_container{
+    margin-bottom: 20px;
+}
+
+
+.root_catalog {
+    overflow: hidden;
+    vertical-align: top;
+    padding: 0 0 10px;
+    font: bold 18px/14px 'Arial Black', Arial, Helvetica, 'sans-serif';
+}
+.root_catalog a:hover {
+
+}
+.leaf_catalog {
+    overflow: visible;
+    vertical-align: top;
+    font: normal 16px 'Arial Black', Arial, Helvetica, 'sans-serif';
+    padding-bottom: 10px;
+}
+
+.root_catalog .root_catalog_link {
+    display: block;
+    height: 20px;
+    line-height: 24px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.root_catalog .root_catalog_link:hover {
+    text-decoration: none;
+}
+.catalog_children_div {
+    padding: 10px 20px 0 10px;
+    border-left: 1px #a5a5a5 solid;
+}
+
+#this_brand {
+    font-size: 20px;
+    color: #851f11;
+}
