--- a/smallcms/templates/mainpage_content.html
+++ b/smallcms/templates/mainpage_content.html
@@ -29,7 +29,7 @@
 {% endblock action %}
 
 
-
+<a href="{% url 'video_gallery:list_all' %}" title="Видео обзоры">
         <div class="row" >
 
             <div class="col-12 video_bg mt-5 text center" style="cursor: pointer;">
@@ -40,6 +40,7 @@
             </div>
 
         </div>
+</a>
 
 
     <div class="row">
