--- a/video_gallery/templates/video_gallery/video_list.html
+++ b/video_gallery/templates/video_gallery/video_list.html
@@ -31,7 +31,7 @@
 
         <div class="col-md-3 col-xs-6" data-wow-delay="0.7s">
 						<a href="{% url 'video_gallery:detail' category_obj.pk %}"  class="listing-anons equal-height-item listing-anons--home triangle triangle--big line-down no-decoration" style="height: 315px;">
-							<div class="text-center">
+							<div class="text-centerнктам скорость загрузки">
                                 {# or use variables (with embedding, too) #}
 {% video category_obj.youtube_url as my_video %}
 
