--- a/user_profile/templates/user_profile/orders_history.html
+++ b/user_profile/templates/user_profile/orders_history.html
@@ -22,30 +22,30 @@
                 <a href="{% url 'auth_logout' %}" class="">выход <span class="fa fa-sign-in"></span></a>
             </div>
 
-            <div class="root_catalog"><a href="{% url 'profile:orders_history' %}" class="root_catalog_link">История заказов</a></div>
-            <div class="root_catalog"><a href="{% url 'profile:edit_user' %}" class="root_catalog_link">Редактирование профиля</a></div>
+            <div class=""><a href="{% url 'profile:orders_history' %}" class="root_catalog_link">История заказов</a></div>
+            <div class=""><a href="{% url 'profile:edit_user' %}" class="root_catalog_link">Редактирование профиля</a></div>
         </div>
         <div class="col-md-12 col-lg-9">
-            <h2 class="flow-text">История заказов</h2>
+            <h3 class="flow-text">История заказов</h3><br><br>
             {% for order in order_list %}
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">{{ order.created_date }} {% comment %}{{ order.status }}{% endcomment %}</h3>
+                <div class="card" style="margin-bottom: 20px;padding: 10px 10px 10px 10px;">
+                  <div class="card-heading">
+                    <h4 class="card-title">{{ order.created_date }} {% comment %}{{ order.status }}{% endcomment %}</h4>
                   </div>
-                  <div class="panel-body table-responsive">
+                  <div class="card-body table-responsive">
 
                     <table class="table table-hover">
                       {% for order_item in order.orderitem_set.all %}
                                 <tr>
-                                    <td><a href="{% url 'shop:product' order_item.item.item.category.first.slug order_item.item.item.slug %}">{{ order_item }}</a></td>
-                                    <td class="col-lg-2">{{ order_item.cols }} шт.</td>
-                                    <td class="col-lg-2">{{ order_item.price }}</td>
+                                    <td width="60%"><a href="{% url 'shop:product' order_item.item.category.first.slug order_item.item.slug %}">{{ order_item }}</a></td>
+                                    <td width="20%">{{ order_item.cols }} шт.</td>
+                                    <td width="20%">{{ order_item.price }}</td>
                                 </tr>
                       {% endfor %}
                     </table>
-
+                    <br>
                     <div class=""><b>Итого: {{ order.total_price }}</b></div>
-                    {% if order.address != "" %}{{ order.address }}{% endif %}
+                    {% if order.address != "" %}<div><b>Адрес доставки:</b> {{ order.address }}</div>{% endif %}
                   </div>
                 </div>
             {% endfor %}
