--- a/smallcms/templates/action.html
+++ b/smallcms/templates/action.html
@@ -1,5 +1,8 @@
 {% load thumbnail %}
-<div class="row">
+
+<div class="d-none d-sm-block">
+
+<div class="row ">
         <div class="col-12 text-center">
 
             <h1>Товары по акции</h1>
@@ -69,3 +72,4 @@
             </div>
             <div class="col-md-1  text-center" style="margin-top: auto;margin-bottom: auto" ><a data-slide="next" href="#Carousel" class="" id="narrow-right" ></a></div>
         </div>
+</div>
