--- a/smallcms/templates/mainpage_content.html
+++ b/smallcms/templates/mainpage_content.html
@@ -5,7 +5,7 @@
     <div class="inline_bloks" >
     </div>
 
-    <div class="inline_bloks" id="block1" >
+    <div class="inline_bloks col-xs-12" id="block1" >
         <a href="/shop/rybalka-i-turizm/"><img  src="/static/images/fish_img.jpg" ></a>
     </div>
 
@@ -13,7 +13,7 @@
     </div>
 
     <div class="inline_bloks" id="block2">
-        <a href="/shop/sport/"><img src="/static/images/sport_img.jpg" ></a>
+        <a href="/shop/sport/"><img src="/static/images/sport_img.jpg"></a>
     </div>
 
     <div class="inline_bloks" >
