--- a/shop/templates/shop/category_detail.html
+++ b/shop/templates/shop/category_detail.html
@@ -126,14 +126,14 @@
         <div class="col-md-12 col-xs-6"  style="">
             {% if item_list.count > 0 %}
 
-            <table class="table">
+{#            <table class="table">#}
 
                 {% for category_obj in item_list %}
 
                     {% if category_obj.in_stock > 0 %}
 
-                    <tr>
-                        <td class="text-left" width="150">
+                    <div class="row">
+                        <div class="text-center col-md-2" >
 
                             {% if category_obj.item_image_set.first.file %}
                                 {% thumbnail category_obj.item_image_set.first.file "400x400" crop="center" as im %}
@@ -149,35 +149,44 @@
 
 
 
-                        </td>
-                        <td width="50%">
+                        </div>
+                        <div class="text-left col-md-4 ml-5">
                                 <a href="{% url 'shop:product' category.slug category_obj.slug %}"> <b style="font-size: 16px;">{{ category_obj.title }}</b> </a> <br> {{ category_obj.item_variation_set.first.title }}
 
                            <br>
                             <input type="hidden" class="item-variation-select-cat" value="{{ category_obj.item_variation_set.first.pk }}">
                             {{ category_obj.content_small }}
-                            {% if user.username == 'ao2005' or user.username == 'tarc'  %} <br><a href="/admin/shop/item/{{ category_obj.pk }}/change/">Редактировать в системе управления {{  user.is_admin }}</a> {% endif %}
-                        </td>
+                            {% if user.username == 'ao2005' or user.username == 'admin'  %} <br><a href="/admin/shop/item/{{ category_obj.pk }}/change/">Редактировать в системе управления {{  user.is_admin }}</a> {% endif %}
+                        </div>
 
 
 
 
 
-                        <td width="20%">
+                        <div class="text-center col-md-2">
+                            {% if category_obj.price_2  %}
+                                <div class="price" class=""><b class="text-success">{{ category_obj.price_1 }} &#8381;</b></div>
+                                <div class="price" ><s class="text-danger text-small">{{ category_obj.price_2 }} &#8381</s></div>
+
+                                {% else %}
                             <div class="price">{{ category_obj.price_1 }} &#8381;</div>
-                        </td>
+
+                                {% endif %}
+                        </div>
 
 
 
-                        <td width="10%" align="center">
+                        <div  class="text-center col-md-3">
 
-                            <div class="input-group" style="{% if category_obj.item_variation_set.first.stock == 0  %} display: none; {% endif %}">
+                        <div style="width: 100%;   text-align: center">
+
+                            <div class="input-group" style="margin:0 auto; width: 115px;{% if category_obj.item_variation_set.first.stock == 0  %} display: none; {% endif %}">
                         <div class="input-group-prepend">
                                   <button type="button" class="btn btn-danger btn-number"  data-type="minus" data-field="v{{ category_obj.pk  }}" data-step="{{ category_obj.min_lot }}">
                                     <span class="glyphicon glyphicon-minus">-</span>
                                   </button>
                         </div>
-                              <input type="number" style="min-width: 50px;" id="qlt{{ category_obj.pk  }}" name="v{{ category_obj.pk  }}" class="cart-quantity form-control input-number" value="{% cookie category_obj.item_variation_set.first.pk  %}"  data-step="{{ category_obj.min_lot }}" min="0" max="999">
+                              <input type="number" style="flex: 0 0 auto; min-width: 50px;" id="qlt{{ category_obj.pk  }}" name="v{{ category_obj.pk  }}" class="cart-quantity form-control input-number" value="{% cookie category_obj.item_variation_set.first.pk  %}"  data-step="{{ category_obj.min_lot }}" min="0" max="999">
 
                                 <div class="input-group-append">
                                   <button type="button" class="btn btn-success btn-number" data-type="plus" data-field="v{{ category_obj.pk  }}" data-step="{{ category_obj.min_lot }}">
@@ -185,7 +194,7 @@
                                   </button>
                                 </div>
                           </div>
-                            <br><br>
+                            <br>
 
 
                             <button class="btn btn-success btn" onclick="cart.add({{category_obj.pk}}, $('#qlt{{category_obj.pk}}').val()); true_out=1; left_coock({{category_obj.pk}});">В КОРЗИНУ</button>
@@ -201,10 +210,12 @@
                                 <small><br><span style="color: red;"><span class="fa fa-shopping-cart"></span> в корзине - <b>{{item.quantity}}</b> </span></small>
                                 {% endif %}
                             {% endfor %}
-                        </td>
+                        </div>
+                        </div>
 
-                    </tr>
+                    </div>
 
+<hr>
                     {%  endif %}
 
 
@@ -229,7 +240,7 @@
                 {% endfor %}
 
 
-        </table>
+{#        </table>#}
 
         {% endif %}
 
