--- a/shop/templates/shop/test_api.html
+++ b/shop/templates/shop/test_api.html
@@ -6,6 +6,7 @@
     Группа (1C Id код базы Зима - 123): <input type="text" name="category"><br>
     Наименование: <input type="text" name="title"><br>
     Цена: <input type="text" name="price_1"><br>
+    Цена до скидки: <input type="text" name="price_2"><br>
     Остаток на складе: <input type="text" name="in_stock"><br>
 
 
